# statusbar

./: Cargo.toml  index.html  package-lock.json  package.json
src/: App.css  App.tsx  controls.rs  main.rs  main.tsx  program_runner.rs  run_command.rs  scene.rs  todos.rs  types.tsx  wm_hints.rs  xdg_manager.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  wm_hints.rs
src/advanced_text_input/: cursor.rs  mod.rs
src/style/: style.sass
src/utils/: storageUtils.ts  taskUtils.ts
statusbar_old/: Cargo.toml
statusbar_old/src/: main.rs  run_command.rs  todos.rs  wm_hints.rs  xdg_manager.rs
statusbar_old/src/advanced_text_input/: editor.rs
