[package]
name = "statusbar"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
iced_wgpu = "0.12.1"
iced_winit = "0.12.2"
log = "0.4.21"
once_cell = "1.19.0"
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
xcb = "1.4.0"
tokio = { version = "1.37.0", features = ["full"] }
iced_futures = { version = "0.12.0", features = ["tokio"] }
sscanf = "0.4.1"
iced_style = "0.12.1"
unicode-segmentation = "1.11.0"
derivative = "2.2.0"
tokio-tungstenite = { version="0.21.0",features = ["native-tls"] }
todoproxy-api = { version = "*", git = "https://github.com/pimpale/todoproxy-api", branch="standalone" }
auth-service-api = { version = "*", git = "https://github.com/innexgo/auth-service-api" }
futures-util = "0.3.30"
rand = "0.8.5"
xdg = "2.5.2"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5.0"
clap = { version = "4.5.4", features = ["derive"] }
iced_widget = "0.12.3"
iced_core = "0.12.3"
signal-hook = "0.3.17"
