[package]
name = "statusbar"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
iced_wgpu = "0.12.1"
iced_winit = "0.12.2"
log = "0.4.22"
once_cell = "1.19.0"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
xcb = { version="1.4.0", features = ["xlib_xcb"] }
x11 = "2.21.0"
tokio = { version = "1.39.3", features = ["full"] }
iced_futures = { version = "0.12.0", features = ["tokio"] }
sscanf = "0.4.2"
iced_style = "0.12.1"
unicode-segmentation = "1.11.0"
derivative = "2.2.0"
tokio-tungstenite = { version="0.23.1",features = ["native-tls"] }
todoproxy-api = { version = "*", git = "https://github.com/pimpale/todoproxy-api", branch="standalone" }
auth-service-api = { version = "*", git = "https://github.com/innexgo/auth-service-api" }
futures-util = "0.3.30"
rand = "0.8.5"
xdg = "2.5.2"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5.2"
clap = { version = "4.5.16", features = ["derive"] }
iced_widget = "0.12.3"
iced_core = "0.12.3"
signal-hook = "0.3.17"
raw-window-handle = "0.6.2"
